[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "OpenEnv-compliant GitHub issue triage environment for AI agent evaluation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.1.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",       # for FastAPI TestClient
    "ruff>=0.1.0",       # linting
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bug_triage_env*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["server/tests"]
asyncio_mode = "auto"
